force-app/main/default/objects/Lending__c/Lending__c.object-meta.xml
<CustomObject>
    <label>Lending</label>
    <nameField>
        <label>Lending Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lendings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>