force-app/main/default/objects/Lending__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <description>Book lent.</description>
    <inlineHelpText>Book lent.</inlineHelpText>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Lendings</relationshipLabel>
    <relationshipName>Lendings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>