force-app/main/default/objects/Lending__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Lending&apos;s End Date.</description>
    <inlineHelpText>Lending&apos;s End Date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>