force-app/main/default/objects/Lending__c/fields/isEnded__c.field-meta.xml
<CustomField>
    <fullName>isEnded__c</fullName>
    <description>Checks if the lending is ended</description>
    <formula>IF( NOT(ISNULL( End_Date__c )), IF( TODAY() &gt;  End_Date__c, true, false), false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isEnded</label>
    <type>Checkbox</type>
</CustomField>