force-app/main/default/objects/Lending__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Lending&apos;s start date.</description>
    <inlineHelpText>Lending&apos;s start date.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>