force-app/main/default/objects/Lending__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who requests the lending.</description>
    <inlineHelpText>User who requests the lending.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lendings</relationshipName>
    <type>Lookup</type>
</CustomField>