force-app/main/default/objects/Lending__c/validationRules/Lending_creation_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lending_creation_validation</fullName>
    <active>true</active>
    <description>Allows a lending only if enough copies are available</description>
    <errorConditionFormula>Book__r.Copies_Left__c &lt;= 0</errorConditionFormula>
    <errorMessage>No Copies Left for the book!</errorMessage>
</ValidationRule>