force-app/main/default/objects/Lending__c/validationRules/Lending_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lending_Date_Validation</fullName>
    <active>true</active>
    <description>A Lending End date (if it&apos;s not null) must ALWAYS be after its start date (We consider that an ongoing lending has its end date null, which is fine).</description>
    <errorConditionFormula>IF(  ISNULL(End_Date__c) , FALSE,  End_Date__c &lt;   Start_Date__c  )</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Invalid End Date Date!</errorMessage>
</ValidationRule>